mpdscribble 0.13 - not yet released
  * libmpdclient update from upstream:
    - suport for Unix domain sockets
    - try all IP addresses from the resolver, resulting in better IPv6 support
    - smaller buffers, less memory usage
  * support the Last.fm Submissions Protocol v1.2
    - including support for 'now playing'
    - ignore seeking
    - now really support crossfading
    - support streaming
  * HTTP proxy support
  * support for libsoup 2.4
  * fixed several crash bugs
  * fixed gcc warnings


New in 0.2.12:

  - Just noticed a patch for 0.2.6 by Decklin Foster in my mailbox
    which i forgot to include in the subsequent releases. Sorry!

    It's included now and is a little bugfix for those who change
    the --sleep parameter.

New in 0.2.11:

  - a crash and some logfile bugs were fixed by Michal Nazarewicz.

  - openbsd compilation fixes by Eric Gillingham.

  - crossfading should not interfere with song submission anymore.

  - no longer tries to submit more than 10 songs at once (as per spec).


New in 0.2.10:

  - Woops, I hadn't noticed David's mbid code only supported .mp3, I 
    just hacked in .ogg and .flac support in the most dirty fashion.


New in 0.2.9:

  - Thanks to David Nicolson mpdscribble now can submit musicbrainz ids. 


New in 0.2.8:

    I finally put together 0.2.8 based on suggestions and patches from 
    several people, so big thank yous for this release go to:

    David Morgan, Michal Nazarewicz, and Andrey Rahmatullin.

Changes:

  - There should be no crashes anymore when mpd is not available for a while.

  - Will submit tracks longer 30 minutes now.

  - Better libsoup and related library detection in ./configure.

  - cosmetic fixes for the logfile (date added, some extra newlines removed).

New in 0.2.5:
     
  - just a few minor bug fixes and cosmetic changes, there is no need
    to upgrade if 0.2.4 is working fine for you.  check the ChangeLog
    for details.


New in 0.2.4:
