@@ -108,7 +108,7 @@ song_changed(const struct mpd_song *song)
 int
 main (int argc, char** argv)
 {
-  struct mpd_song *song = NULL;
+  struct mpd_song *song = NULL, *prev;
 
   int last_id = -1;
   int elapsed = 0;
@@ -149,12 +149,7 @@ main (int argc, char** argv)
       fflush (log);
       as_sleep ();
 
-      if (song != NULL)
-        {
-          mpd_freeSong(song);
-          song = NULL;
-        }
-
+      prev = song;
       elapsed = lmc_current (&song);
 
       if (now () > next_save)
@@ -184,6 +179,23 @@ main (int argc, char** argv)
           was_paused = false;
         }
 
+      /* submit the previous song */
+      if (!submitted && prev != NULL &&
+          (song == NULL || prev->id != song->id) &&
+          played_long_enough(prev->time))
+        {
+          /* FIXME:
+             libmpdclient doesn't have any way to fetch the musicbrainz id. */
+          int q = as_songchange (prev->file, prev->artist, prev->title,
+                                 prev->album, mbid,
+                                 prev->time > 0 ? prev->time
+                                 : (int)g_timer_elapsed(timer, NULL),
+                                 NULL);
+          if (q != -1)
+            notice ("added (%s - %s) to submit queue at position %i.",
+                    prev->artist, prev->title, q);
+        }
+
       /* new song. */
       if (song != NULL && song->id != last_id)
         {
@@ -191,21 +203,8 @@ main (int argc, char** argv)
           last_id = song->id;
         }
 
-      if (!submitted && song != NULL && played_long_enough(song->time))
-        {
-          /* FIXME:
-             libmpdclient doesn't have any way to fetch the musicbrainz id. */
-          int q = as_songchange (song->file, song->artist, song->title,
-                                 song->album, mbid,
-                                 song->time > 0 ? song->time
-                                 : (int)g_timer_elapsed(timer, NULL),
-                                 NULL);
-          if (q != -1)
-            notice ("added (%s - %s) to submit queue at position %i.",
-                    song->artist, song->title, q);
-
-          submitted = 1;
-        }
+      if (prev != NULL)
+        mpd_freeSong(prev);
     }
 
   g_timer_destroy(timer);
